ensure text remains visible during webfoot load through use of the font-display attribute

--- a/wp-content/themes/makerfaire/less/global.less
+++ b/wp-content/themes/makerfaire/less/global.less
@@ -4,46 +4,54 @@
 	.sumome-react-wysiwyg-popup-container { display: none; }
 }
 @font-face {
-  font-family: "icomoon";
-  src: url("../fonts/icomoon.eot?c7jrk2");
-  src: url("../fonts/icomoon.eot?#iefixc7jrk2") format("embedded-opentype"), url("../fonts/icomoon.woff?c7jrk2") format("woff"), url("../fonts/icomoon.ttf?c7jrk2") format("truetype"), url("../fonts/icomoon.svg?c7jrk2#icomoon") format("svg");
-  font-weight: normal;
-  font-style: normal;
+	font-family: "icomoon";
+	src: url("../fonts/icomoon.eot?c7jrk2");
+	src: url("../fonts/icomoon.eot?#iefixc7jrk2") format("embedded-opentype"), url("../fonts/icomoon.woff?c7jrk2") format("woff"), url("../fonts/icomoon.ttf?c7jrk2") format("truetype"), url("../fonts/icomoon.svg?c7jrk2#icomoon") format("svg");
+	font-weight: normal;
+	font-style: normal;
+	font-display: fallback;
 }
 @font-face {
-  font-family: "Linearicons-Free";
-  src: url("../fonts/Linearicons-Free.eot?c7jrk2");
-  src: url("../fonts/Linearicons-Free.eot?#iefixc7jrk2") format("embedded-opentype"), url("../fonts/Linearicons-Free.woff?c7jrk2") format("woff"), url("../fonts/Linearicons-Free.ttf?c7jrk2") format("truetype"), url("../fonts/Linearicons-Free.svg?c7jrk2#Linearicons") format("svg");
+	font-family: "Linearicons-Free";
+	src: url("../fonts/Linearicons-Free.eot?c7jrk2");
+	src: url("../fonts/Linearicons-Free.eot?#iefixc7jrk2") format("embedded-opentype"), url("../fonts/Linearicons-Free.woff?c7jrk2") format("woff"), url("../fonts/Linearicons-Free.ttf?c7jrk2") format("truetype"), url("../fonts/Linearicons-Free.svg?c7jrk2#Linearicons") format("svg");
+	font-display: fallback;
 }
 @font-face {
 	font-family: 'Linearicons';
 	src:url('../fonts/Linearicons.ttf');
+   font-display: fallback;
 }
 
 @font-face {
 	font-family: 'Roboto';
-	src: //url('../fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Regular.ttf');
+	src: url('../fonts/Roboto-Regular.ttf');
+   font-display: fallback;
 }
 @font-face {
-    font-family: "Roboto-Light";
-    src: url("../fonts/Roboto-Light.ttf");
+	font-family: "Roboto-Light";
+	src: url("../fonts/Roboto-Light.ttf");
+	font-display: fallback;
 }
 @font-face { // This is why we need a universal style guide
-    font-family: "Roboto Light";
-    src: url("../fonts/Roboto-Light.ttf");
+	font-family: "Roboto Light";
+	src: url("../fonts/Roboto-Light.ttf");
+	font-display: fallback;
 }
 @font-face {
-    font-family: "Roboto Bold";
-    src: url("../fonts/Roboto-Bold.ttf");
+	font-family: "Roboto Bold";
+	src: url("../fonts/Roboto-Bold.ttf");
+	font-display: fallback;
 }
 @font-face {
-    font-family: "Roboto Condensed";
-    src: url("../fonts/RobotoCondensed-Regular.ttf");
+	font-family: "Roboto Condensed";
+	src: url("../fonts/RobotoCondensed-Regular.ttf");
+	font-display: fallback;
 }
 @font-face { 
-    font-family: "Roboto Condensed Bold";
-    src: url("../fonts/RobotoCondensed-Bold.ttf");
+	font-family: "Roboto Condensed Bold";
+	src: url("../fonts/RobotoCondensed-Bold.ttf");
+	font-display: fallback;
 }
 body {
   font-weight: 300;
